--- a/src/3x3_pillar_sims/dataset_baloney.ipynb
+++ b/src/3x3_pillar_sims/dataset_baloney.ipynb
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "len(files)"
+    "len(files) # 2215"
    ]
   },
   {
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "len(missing)"
+    "len(missing) # 2785"
    ]
   },
   {
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "len(files) + len(missing)"
+    "len(files) + len(missing) # 5000"
    ]
   },
   {
@@ -183,116 +183,6 @@
    "source": [
     "max(missing)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c139b06b-eff7-4d3a-a59f-e98ce38f23a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 12, 13, 14, 15, 16, 17, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 47, 48, 49, 50, 51, 52, 53, 55, 56, 57, 58, 59, 60, 61]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(files[:50])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3ffe9acf-4462-4005-88ed-32a19667871b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# num_sims = 4959\n",
-    "# num_parallel_ops = 443\n",
-    "counter = 8\n",
-    "\n",
-    "num_sims = 50\n",
-    "num_parallel_ops = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34a5c414-f14d-435a-b15a-ea11cad7c042",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "current_group = []\n",
-    "while(counter < num_sims):\n",
-    "    if(len(current_group) < num_parallel_ops):\n",
-    "        if counter not in files:\n",
-    "            num_to_launch = num_parallel_ops - len(current_group)\n",
-    "            for i in range(counter, counter + num_to_launch):\n",
-    "                print(counter)\n",
-    "    counter += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "ca10f5ad-8749-425f-84f4-d9eee541f0c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "18\n",
-      "19\n",
-      "26\n",
-      "31\n",
-      "34\n",
-      "41\n",
-      "46\n"
-     ]
-    }
-   ],
-   "source": [
-    "counter = 8\n",
-    "\n",
-    "num_sims = 50\n",
-    "num_parallel_ops = 5\n",
-    "\n",
-    "current_group = [] \n",
-    "\n",
-    "while(counter < num_sims):\n",
-    "\n",
-    "    # -- Launch jobs if there is room in processing group\n",
-    "\n",
-    "    if(len(current_group) < num_parallel_ops):\n",
-    "\n",
-    "        num_to_launch = num_parallel_ops - len(current_group)\n",
-    "\n",
-    "        for i in range(counter, counter + num_to_launch):\n",
-    "\n",
-    "            # --- Configure simulation job\n",
-    "\n",
-    "            #job_name = \"%s-%s\" % (params[\"kill_tag\"], str(counter).zfill(6))\n",
-    "            if counter not in files:\n",
-    "                print(counter)\n",
-    "            counter += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6adbf41c-19fb-47c4-b471-5de2084fa6e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
