ready to generate batch 3 (datagen)

--- a/src/3x3_pillar_sims/dataset_baloney.ipynb
+++ b/src/3x3_pillar_sims/dataset_baloney.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2dc0a5fe-e410-458f-b07e-63ee53506065",
    "metadata": {},
    "outputs": [],
@@ -81,14 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f77b9691-e368-43d9-a649-740031a6a0f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2215"
+       "3083"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(files) # was 2215. should go up to ~3000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dfd9d7a9-83ff-4bf9-ad2b-c5039d9625bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1917"
       ]
      },
      "execution_count": 8,
@@ -97,33 +118,12 @@
     }
    ],
    "source": [
-    "len(files) # 2215"
+    "len(missing) # was 2785. should do gown to ~2000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dfd9d7a9-83ff-4bf9-ad2b-c5039d9625bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2785"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(missing) # 2785"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "4440d221-c3a2-4a10-871b-d6da0594dd64",
    "metadata": {},
    "outputs": [
@@ -133,28 +133,28 @@
        "5000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(files) + len(missing) # 5000"
+    "len(files) + len(missing) # 5000. should stay the same!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4dd633ce-5e52-4d6b-b293-e30dd9565205",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "54"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "645ce94a-9814-4ef2-bf71-6db485d50c29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4958"
+       "4745"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +183,14 @@
    "source": [
     "max(missing)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4afd83-3518-40d7-9c0f-97b4f23d9e82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
